--- a/training.ipynb
+++ b/training.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": 5,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -14,22 +14,49 @@
     "import re\n",
     "from shapely.geometry import Point\n",
     "from pathlib import Path\n",
-    "import matplotlib.pyplot as plt\n",
-    "import matplotlib.dates as mdates\n",
-    "from collections import Counter\n",
     "from sklearn.ensemble import IsolationForest, HistGradientBoostingClassifier, RandomForestClassifier\n",
     "from sklearn.model_selection import train_test_split, GridSearchCV, StratifiedKFold\n",
     "from sklearn.utils.class_weight import compute_class_weight\n",
     "import joblib\n",
     "from sklearn.metrics import classification_report\n",
     "\n",
-    "\n",
-    "DATA_DIR = '/cluster/home/nteutschm/eqdetection/data/'\n",
+    "DATA_PATH = '/cluster/home/nteutschm/eqdetection/data/'\n",
     "RANDOM_STATE = 86\n",
     "MODEL_TYPE = 'RandomForest' # IsolationForest HistGradientBoosting RandomForest\n",
     "MODEL_PATH = f'/cluster/scratch/nteutschm/eqdetection/models/{MODEL_TYPE}.pkl'\n",
-    "SAVE_PATH = f'/cluster/scratch/nteutschm/eqdetection/predictions/{MODEL_TYPE}.csv'\n",
-    "STORE_FEATURES = f'/cluster/scratch/nteutschm/eqdetection/features/{MODEL_TYPE}'"
+    "PREDICTIONS_PATH = f'/cluster/scratch/nteutschm/eqdetection/predictions/{MODEL_TYPE}.csv'\n",
+    "FEATURES_PATH = f'/cluster/scratch/nteutschm/eqdetection/features/{MODEL_TYPE}'\n",
+    "\n",
+    "LOAD_MODEL = False # If already trained model is saved under MODEL_PATH, it can be loaded if set to True to skip the entire training process\n",
+    "\n",
+    "# Optimal parameters:\n",
+    "OPTIMAL_PARAMS = False # If optimal parametrs should be used, or the parameters should be tuned (set to False)\n",
+    "\n",
+    "# If OPTIMAL_PARAMS is True, these parameters are used for the training process:\n",
+    "BEST_PARAMS_RANDOM_FOREST = {\n",
+    "    'n_estimators': 500,\n",
+    "    'max_depth': 30,\n",
+    "    'class_weight': 'balanced',\n",
+    "    'random_state': RANDOM_STATE\n",
+    "}\n",
+    "\n",
+    "BEST_PARAMS_ISOLATION_FOREST = {\n",
+    "    'n_estimators': 300,\n",
+    "    'max_samples': 0.8,\n",
+    "    'contamination': 0.001,\n",
+    "    'random_state': RANDOM_STATE\n",
+    "}\n",
+    "\n",
+    "BEST_PARAMS_HIST_GRADIENT_BOOSTING = {\n",
+    "    'learning_rate': 0.1,\n",
+    "    'max_iter': 200,\n",
+    "    'max_depth': 10,\n",
+    "    'class_weight': 'balanced',\n",
+    "    'random_state': RANDOM_STATE,\n",
+    "    'early_stopping': True,\n",
+    "    'n_iter_no_change': 7,\n",
+    "    'validation_fraction': 0.1\n",
+    "}"
    ]
   },
   {
@@ -127,7 +154,7 @@
     "      and offset/decay information.\n",
     "    \"\"\"\n",
     "    \n",
-    "    with open(DATA_DIR+filename, 'r') as file:\n",
+    "    with open(DATA_PATH+filename, 'r') as file:\n",
     "        lines = file.readlines()\n",
     "\n",
     "    header_lines = [line for line in lines if line.startswith('#')]\n",
@@ -194,21 +221,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 4,
+   "execution_count": 36,
    "metadata": {},
    "outputs": [],
    "source": [
-    "def clean_dataframes(dfs, missing_value_threshold=None):\n",
+    "def clean_dataframes(dfs, missing_value_threshold=None, days_included=None, minimal_offset=0):\n",
     "    \"\"\"\n",
     "    Cleans the dataframes by:\n",
     "    1. Removing dataframes without any coseismic offsets in any of the 3 components (n, e, u).\n",
     "    2. Removing non-coseismic offsets from all components.\n",
     "    3. Optionally removing dataframes with excessive missing values in all 3 components.\n",
+    "    4. Optionally keeping only data within a specified range of days before the first coseismic offset\n",
+    "       and after the last coseismic offset, if 'days_included' is provided.\n",
+    "    5. Optionally selecting only coseismic offsets with absolute values greater than 'minimal_offset'.\n",
     "\n",
     "    Parameters:\n",
     "    dfs (list): List of dataframes with GNSS data.\n",
     "    missing_value_threshold (float, optional): Percentage (0 to 1) of allowed missing values.\n",
     "                                               If exceeded, the dataframe is removed.\n",
+    "    days_included (int, optional): Number of days before and after coseismic offsets to keep.\n",
     "\n",
     "    Returns:\n",
     "    list: Cleaned list of dataframes.\n",
@@ -223,18 +254,33 @@
     "        has_coseismic = False\n",
     "        df = add_missing_dates(org_df)\n",
     "\n",
+    "        # Determine the range of coseismic offsets\n",
+    "        first_coseismic_date = None\n",
+    "        last_coseismic_date = None\n",
+    "        \n",
     "        for comp in components_offsets:\n",
     "            filtered_offsets = []\n",
     "            for offset in df.attrs['offsets'][comp]['offsets']:\n",
-    "                if offset['coseismic']:\n",
+    "                if offset['coseismic'] and abs(offset['value']) >= minimal_offset:\n",
     "                    has_coseismic = True\n",
     "                    filtered_offsets.append(offset)\n",
+    "                    offset_date = pd.to_datetime(offset['date'])\n",
+    "                    if first_coseismic_date is None or offset_date < first_coseismic_date:\n",
+    "                        first_coseismic_date = offset_date\n",
+    "                    if last_coseismic_date is None or offset_date > last_coseismic_date:\n",
+    "                        last_coseismic_date = offset_date\n",
     "            # Update offsets to retain only coseismic\n",
     "            df.attrs['offsets'][comp]['offsets'] = filtered_offsets\n",
     "\n",
     "        # Skip dataframe if no coseismic offsets in any component\n",
     "        if not has_coseismic:\n",
     "            continue\n",
+    "\n",
+    "        # Trim data to include the range around the coseismic offsets if days_included is provided\n",
+    "        if first_coseismic_date and days_included is not None:\n",
+    "            start_date = first_coseismic_date - pd.Timedelta(days=days_included)\n",
+    "            end_date = last_coseismic_date + pd.Timedelta(days=days_included)\n",
+    "            df = df[(df.index >= start_date) & (df.index <= end_date)]\n",
     "\n",
     "        # Check missing values for all components combined, if threshold is provided\n",
     "        if missing_value_threshold is not None:\n",
@@ -281,8 +327,7 @@
     "    target_vector = []\n",
     "    components_offsets = ['n', 'e', 'u']  # North, East, Up\n",
     "    \n",
-    "    #columns to include in creating the chunks\n",
-    "    #cols = ['N', 'E', 'U', 'N sig', 'E sig', 'U sig', 'CorrNE', 'CorrNU', 'CorrEU']\n",
+    "    #columns to include in creating the chunks, available: ['N', 'E', 'U', 'N sig', 'E sig', 'U sig', 'CorrNE', 'CorrNU', 'CorrEU', 'latitude', 'longitude', 'height', 'offset_value', 'offset_error', 'decay_value', 'decay_error', 'decay_tau', 'decay_type']\n",
     "    cols = ['N', 'E', 'U']\n",
     "\n",
     "    for df in dfs:\n",
@@ -352,7 +397,7 @@
    "outputs": [],
    "source": [
     "def save_predictions(test_predictions):\n",
-    "    test_predictions.to_csv(SAVE_PATH, index=True)\n",
+    "    test_predictions.to_csv(PREDICTIONS_PATH, index=True)\n",
     "    \n",
     "def compute_weights(train_labels):\n",
     "    classes = np.unique(train_labels)\n",
@@ -366,7 +411,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "def prepare_data(X, y, test_size=0.3, random_state=42):\n",
+    "def prepare_data(X, y, test_size=0.3, random_state=RANDOM_STATE):\n",
     "    \"\"\"\n",
     "    Prepares training and testing data by splitting the feature matrix and target vector.\n",
     "\n",
@@ -400,11 +445,60 @@
   },
   {
    "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Function to return the RandomForest model with optimal parameters\n",
+    "def random_forest():\n",
+    "    model = RandomForestClassifier(\n",
+    "        n_estimators=BEST_PARAMS_RANDOM_FOREST['n_estimators'],\n",
+    "        max_depth=BEST_PARAMS_RANDOM_FOREST['max_depth'],\n",
+    "        class_weight=BEST_PARAMS_RANDOM_FOREST['class_weight'],\n",
+    "        random_state=BEST_PARAMS_RANDOM_FOREST['random_state']\n",
+    "    )\n",
+    "    return model\n",
+    "\n",
+    "# Function to return the IsolationForest model with optimal parameters\n",
+    "def isolation_forest():\n",
+    "    model = IsolationForest(\n",
+    "        n_estimators=BEST_PARAMS_ISOLATION_FOREST['n_estimators'],\n",
+    "        max_samples=BEST_PARAMS_ISOLATION_FOREST['max_samples'],\n",
+    "        contamination=BEST_PARAMS_ISOLATION_FOREST['contamination'],\n",
+    "        random_state=BEST_PARAMS_ISOLATION_FOREST['random_state']\n",
+    "    )\n",
+    "    return model\n",
+    "\n",
+    "# Function to return the HistGradientBoostingClassifier model with optimal parameters\n",
+    "def hist_gradient_boosting():\n",
+    "    model = HistGradientBoostingClassifier(\n",
+    "        learning_rate=BEST_PARAMS_HIST_GRADIENT_BOOSTING['learning_rate'],\n",
+    "        max_iter=BEST_PARAMS_HIST_GRADIENT_BOOSTING['max_iter'],\n",
+    "        max_depth=BEST_PARAMS_HIST_GRADIENT_BOOSTING['max_depth'],\n",
+    "        class_weight=BEST_PARAMS_HIST_GRADIENT_BOOSTING['class_weight'],\n",
+    "        random_state=BEST_PARAMS_HIST_GRADIENT_BOOSTING['random_state'],\n",
+    "        early_stopping=BEST_PARAMS_HIST_GRADIENT_BOOSTING['early_stopping'],\n",
+    "        n_iter_no_change=BEST_PARAMS_HIST_GRADIENT_BOOSTING['n_iter_no_change'],\n",
+    "        validation_fraction=BEST_PARAMS_HIST_GRADIENT_BOOSTING['validation_fraction']\n",
+    "    )\n",
+    "    return model"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
     "def optimize_random_forest(X_train, y_train, weights):\n",
+    "    if LOAD_MODEL:\n",
+    "        print(F'Loading Random Forest model from: {MODEL_PATH}')\n",
+    "        return joblib.load(MODEL_PATH)\n",
+    "    \n",
+    "    if OPTIMAL_PARAMS:\n",
+    "        print(f'Training Random Forest model using the specified optimal parameters: {BEST_PARAMS_RANDOM_FOREST}')\n",
+    "        return random_forest()\n",
+    "    \n",
     "    param_grid = {\n",
     "        'n_estimators': [100, 500],\n",
     "        'max_depth': [10, 30],\n",
@@ -421,6 +515,14 @@
     "    return grid_search.best_estimator_\n",
     "\n",
     "def optimize_isolation_forest(X_train, y_train):\n",
+    "    if LOAD_MODEL:\n",
+    "        print(F'Loading Iolation Forest model from: {MODEL_PATH}')\n",
+    "        return joblib.load(MODEL_PATH)\n",
+    "    \n",
+    "    if OPTIMAL_PARAMS:\n",
+    "        print(f'Training Isolation Forest model using the specified optimal parameters: {BEST_PARAMS_ISOLATION_FOREST}')\n",
+    "        return isolation_forest()\n",
+    "    \n",
     "    param_grid = {\n",
     "        'n_estimators': [100, 200, 300],\n",
     "        'max_samples': [0.8, 1.0],\n",
@@ -438,6 +540,14 @@
     "    return grid_search.best_estimator_\n",
     "\n",
     "def optimize_hist_gradient_boosting(X_train, y_train, weights):\n",
+    "    if LOAD_MODEL:\n",
+    "        print(F'Loading Hist Gradient Boosting model from: {MODEL_PATH}')\n",
+    "        return joblib.load(MODEL_PATH)\n",
+    "    \n",
+    "    if OPTIMAL_PARAMS:\n",
+    "        print(f'Training Hist Gradient Boosting model using the specified optimal parameters: {BEST_PARAMS_HIST_GRADIENT_BOOSTING}')\n",
+    "        return hist_gradient_boosting()\n",
+    "    \n",
     "    param_grid = {\n",
     "        'learning_rate': [0.01, 0.1, 0.2],\n",
     "        'max_iter': [100, 200, 300],\n",
@@ -446,7 +556,10 @@
     "        'random_state': [RANDOM_STATE]\n",
     "    }\n",
     "        \n",
-    "    hgb = HistGradientBoostingClassifier()\n",
+    "    hgb = HistGradientBoostingClassifier(early_stopping=True,\n",
+    "        n_iter_no_change=7,\n",
+    "        validation_fraction=0.1)\n",
+    "    \n",
     "    stratified_cv = StratifiedKFold(n_splits=5, shuffle=True, random_state=RANDOM_STATE)\n",
     "    grid_search = GridSearchCV(\n",
     "        estimator=hgb,\n",
@@ -513,7 +626,7 @@
     "        test_predictions = model.predict(X_test)\n",
     "        \n",
     "    else:\n",
-    "        raise ValueError('Used Model Type not implement. Please control spelling!')\n",
+    "        raise ValueError('Used Model Type not implemented. Please control spelling!')\n",
     "    \n",
     "    test_predictions = pd.Series(test_predictions, index=X_test.index)\n",
     "    \n",
@@ -537,19 +650,19 @@
    "source": [
     "def main():\n",
     "    dfs = []\n",
-    "    dir = Path(DATA_DIR)\n",
+    "    dir = Path(DATA_PATH)\n",
     "    for file_path in dir.iterdir():\n",
     "        if file_path.is_file():\n",
     "            dfs.append(read_file(file_path.name))\n",
     "\n",
-    "    cleaned_dfs = clean_dataframes(dfs, missing_value_threshold=0.05)\n",
+    "    cleaned_dfs = clean_dataframes(dfs, missing_value_threshold=0, days_included=100, minimal_offset=10)\n",
     "    \n",
     "    # HistGradientBoosting designed to deal with None data -> No interpolation needed\n",
     "    interpolate = False if MODEL_TYPE == 'HistGradientBoosting' else True\n",
     "    X, y = extract_features(cleaned_dfs, interpolate=interpolate)\n",
     "    \n",
-    "    X.to_csv(f'{STORE_FEATURES}_features.csv', index=True)\n",
-    "    pd.Series(y).to_csv(f'{STORE_FEATURES}_target.csv', index=False, header=False)\n",
+    "    X.to_csv(f'{FEATURES_PATH}_features.csv', index=True)\n",
+    "    pd.Series(y).to_csv(f'{FEATURES_PATH}_target.csv', index=False, header=False)\n",
     "    \n",
     "    model, test_predictions, report = train_model(X, y, model_type=MODEL_TYPE)\n",
     "    print(f'Report for model: {MODEL_TYPE} \\n {report}')"
