--- a/Chow_running.ipynb
+++ b/Chow_running.ipynb
@@ -268,9 +268,7 @@
   {
    "cell_type": "markdown",
    "id": "91040101-1795-4f46-ba2c-0adc9b1f9fc0",
-   "metadata": {
-    "jp-MarkdownHeadingCollapsed": true
-   },
+   "metadata": {},
    "source": [
     "### Chow test"
    ]
@@ -499,7 +497,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 28,
    "id": "3dbba55f-645a-4357-8260-100d94bad9d9",
    "metadata": {},
    "outputs": [
@@ -507,8 +505,24 @@
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Processing station 0...\n"
+      "Processing station 0...\n",
+      "Processing station 100...\n",
+      "Processing station 200...\n",
+      "Processing station 300...\n",
+      "Processing station 400...\n",
+      "Processing station 500...\n",
+      "Processing station 600...\n"
      ]
+    },
+    {
+     "data": {
+      "text/plain": [
+       "\"\\n#Adjust name\\nwith open(os.path.join(save_dir, 'results.pkl'), 'rb') as file:\\n    results = pickle.load(file)\\n\""
+      ]
+     },
+     "execution_count": 28,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -536,7 +550,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 25,
+   "execution_count": 29,
    "id": "c86c4039-08e7-4a9a-8874-8deb8b08bbe8",
    "metadata": {},
    "outputs": [
@@ -551,10 +565,10 @@
       "Processing station 400...\n",
       "Processing station 500...\n",
       "Processing station 600...\n",
-      "True Positives: 351\n",
-      "False Positives: 604\n",
-      "False Negatives: 2321\n",
-      "True Negatives: 13790016\n"
+      "True Positives: 697\n",
+      "False Positives: 36006\n",
+      "False Negatives: 1975\n",
+      "True Negatives: 13754614\n"
      ]
     },
     {
@@ -563,7 +577,7 @@
        "\"\\n#Adjust name\\nstats_df = pd.read_csv('stats.csv')\\n\""
       ]
      },
-     "execution_count": 25,
+     "execution_count": 29,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -623,7 +637,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 27,
+   "execution_count": 30,
    "id": "94f09a7a-e600-41f4-ab08-1ace55efaa41",
    "metadata": {},
    "outputs": [
@@ -658,6 +672,13 @@
       "Recall: 0.1314\n",
       "F1-Score: 0.1935\n",
       "Accuracy: 0.9998\n",
+      "--------------------------------------------------\n",
+      "Experiment Parameters:\n",
+      "Outliers: <5%, Chow Treshold: 20, Days window: 0\n",
+      "Precision: 0.0190\n",
+      "Recall: 0.2609\n",
+      "F1-Score: 0.0354\n",
+      "Accuracy: 0.9972\n",
       "--------------------------------------------------\n",
       "Experiment Parameters:\n",
       "Outliers: <5%, Chow Treshold: 20, Days window: 1\n",
